--- a/CSS/index.css
+++ b/CSS/index.css
@@ -126,8 +126,29 @@
   display: flex;
   flex-direction: column;
 }
-.post form input , .post form button {
+.post form input  {
   width: 80%;
+}
+
+.post form span {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  font-size: 12px;
+  color: grey;
+  cursor: pointer;
+  transform: translate(-50%);
+  background-color: white;
+  border: 2px solid black;
+  height: 40px;
+  width: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  border-radius: 10%;
+  font-size: 12px;
 }
 
 .post-content {
