--- a/CSS/index.css
+++ b/CSS/index.css
@@ -126,7 +126,7 @@
   display: flex;
   flex-direction: column;
 }
-.post form input  {
+.post form input, .post form textarea  {
   width: 80%;
 }
 
@@ -151,8 +151,14 @@
   font-size: 12px;
 }
 
-.post-content {
-  height: 200px;
+#post-content {
+  height: 140px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+
 }
 html,
 body {
