--- a/CSS/index.css
+++ b/CSS/index.css
@@ -22,7 +22,8 @@
 .header {
   width: 100%;
   height: 75px;
-  background-color: #388E3C;
+  background-color: rgb(160, 1, 30);
+  -webkit-font-smoothing: antialiased;
   color: white;
   display: flex;
   justify-content: center;
@@ -34,6 +35,7 @@
 .header h1 {
   margin: 0;
   font-size: 48px;
+  font-weight: 700;
 }
 .menu-button {
   position: absolute;
@@ -160,10 +162,8 @@
   justify-content: flex-start;
 
 }
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto';
-  background-color: #fffef7;
+
+.down-arrow {
+  height: 20px;
+  width: 20px;
 }
