--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,7 +31,17 @@
   position: fixed;
   top: 0;
   z-index: 2;
+  animation: 1s fadein 0.5s forwards;
+	opacity: 0;
+	color: #fff;
 }
+
+@keyframes fadein {
+	100% {
+		opacity: 1;
+	}
+}
+
 .header h1 {
   margin: 0;
   font-size: 48px;
@@ -68,6 +78,16 @@
 }
 .articles {
   margin-top: 95px;
+  opacity: 0;
+	margin-top: 100px;
+	animation: 1s slidefade 1s forwards;
+}
+
+@keyframes slidefade {
+	100% {
+		opacity: 1;
+		margin: 0;
+	}
 }
 .article {
   margin: 20px 10%;
@@ -122,6 +142,14 @@
   box-shadow: 2px 2px 2px lightgrey;
   display: flex;
   flex-direction: column;
+  opacity: 0;
+	animation: 1s slidefade 1s forwards;
+}
+
+@keyframes slidefade {
+	100% {
+		opacity: 1;
+	}
 }
 
 .post form {
