--- a/CSS/index.css
+++ b/CSS/index.css
@@ -57,21 +57,42 @@
   position: fixed;
   top: 75px;
   left: 0;
-  width: 350px;
-  height: 100vh;
+  width: 200px;
+  height: 30vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
-  background-color: #81C784;
-  border: 1px solid #004D40;
+  background-color: rgb(160, 1, 30);
+  border: 1px solid black;
   border-left: none;
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
 }
+menu ul {
+ padding-left: 0;
+ width: 100%;
+}
 .menu ul li {
   list-style-type: none;
-  font-size: 32px;
-  padding: 30px 0;
-  text-align: center;
+  font-size: 16px;
+  padding: 10px 0;
+  text-align: left;
+  color: white;
+  width: 100%;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  padding: 10px 0;
+  text-align: left;
+  color: white;
+  height: 100%;
+  width: 100%;
+}
+
+.menu ul li a:hover {
+  background-color: white;
+  color: rgb(160, 1, 30);
 }
 .menu--open {
   display: block;
